[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/EdificioTaka.gd" type="Script" id=1]
[ext_resource path="res://sprites/ciudad/Suelo_Mapa.png" type="Texture" id=2]
[ext_resource path="res://sprites/ciudad/Suelo_Mapa_noche.png" type="Texture" id=3]

[node name="Suelo" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="Sprite2" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


